authentication in progress

--- a/cvManager/View/LoginView.xaml
+++ b/cvManager/View/LoginView.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:cvManager.View"
+        xmlns:viewModel="clr-namespace:cvManager.ViewModel" xmlns:customcontrols="clr-namespace:cvManager.CustomControls"
         mc:Ignorable="d"
         Title="LoginView" Height="550" Width="800"
         WindowStyle="None"
@@ -12,6 +13,15 @@
         MouseDown="Window_MouseDown"
         AllowsTransparency="True"
         Background="Transparent">
+    <Window.DataContext>
+        <viewModel:LoginViewModel/>
+    </Window.DataContext>
+    <Window.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibility"/>
+    </Window.Resources>
+    <Window.Visibility>
+        <Binding Path="IsViewVisible" Mode="TwoWay" Converter="{StaticResource BooleanToVisibility}"/>
+    </Window.Visibility>
     <Border CornerRadius="12">
         <Border.Background>
             <ImageBrush ImageSource="/Images/back-image.jpg"
@@ -151,6 +161,7 @@
                                Margin="0,35,0,0"/>
 
                     <TextBox x:Name="txtUser"
+                             Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"
                              FontSize="13"
                              FontWeight="Medium"
                              FontFamily="Montserrat"                            
@@ -177,27 +188,22 @@
                                FontFamily="Montserrat"                             
                                Margin="0,15,0,0"/>
 
-                    <PasswordBox x:Name="txtPass"
-                             FontSize="13"
-                             FontWeight="Medium"
-                             FontFamily="Montserrat"                            
-                             Foreground="White"
-                             CaretBrush="LightGray"
-                             BorderBrush="DarkGray"
-                             BorderThickness="0,0,0,2"
+                    <customcontrols:BindablePasswordBox 
+                             Password="{Binding Password , Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                              Height="28"
-                             VerticalContentAlignment="Center"
-                             Margin="0,5,0,0"
-                             Padding="20,0,0,0">
+                             Margin="0,5,0,0">
 
-                        <PasswordBox.Background>
-                            <ImageBrush ImageSource="/Images/key-icon.png"
-                                        Stretch="None"
-                                        AlignmentX="Left"/>
-                        </PasswordBox.Background>
-                    </PasswordBox>
+                    </customcontrols:BindablePasswordBox>
+                    <TextBlock Text="{Binding ErrorMessage}"
+                               Foreground="#D7596D"
+                               FontSize="12"
+                               FontWeight="Medium"
+                               FontFamily="Montserrat"                             
+                               Margin="0,30,0,0"
+                               TextWrapping="Wrap"/>
 
-                    <Button x:Name="btnLogin"                          
+                    <Button x:Name="btnLogin"   
+                            Command="{Binding LoginCommand}"
                             BorderThickness="0"
                             Content="s'Authentifier"
                             Foreground="White"
@@ -205,7 +211,7 @@
                             FontFamily="Montserrat"
                             Cursor="Hand"                           
                             Margin="0,50,0,0"
-                            Click="btnLogin_Click">
+                            >
 
                         <Button.Style>
                             <Style TargetType="Button">
