--- a/cvManager/App.xaml
+++ b/cvManager/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:cvManager"
-             StartupUri="View/LoginView.xaml">
+             Startup="ApplicationStart">
     <Application.Resources>
          
     </Application.Resources>
