login and current user recover are done

--- a/cvManager/View/MainWindow.xaml
+++ b/cvManager/View/MainWindow.xaml
@@ -4,9 +4,18 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:cvManager.View"
+        xmlns:viewModel="clr-namespace:cvManager.ViewModel"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.DataContext>
+        <viewModel:MainViewModel/>
+    </Window.DataContext>
     <Grid>
-        
+        <TextBlock Text="{Binding CurrentUserAccount.DisplayName}"
+                   FontSize="30"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Center"/>
+
+
     </Grid>
 </Window>
