--- a/cvManager/App.xaml
+++ b/cvManager/App.xaml
@@ -4,6 +4,7 @@
              xmlns:local="clr-namespace:cvManager"
              Startup="ApplicationStart">
     <Application.Resources>
-         
+        <ResourceDictionary Source="/Styles/UIColors.xaml"/>
+
     </Application.Resources>
 </Application>
