--- a/cvManager/Styles/UIColors.xaml
+++ b/cvManager/Styles/UIColors.xaml
@@ -1,14 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!--Background Colors-->
-    <Color x:Key="primaryBackColor1">#0A003A</Color>
-    <Color x:Key="primaryBackColor2">#1C0E49</Color>
+    <Color x:Key="primaryBackColor1">Green</Color>
+    <Color x:Key="primaryBackColor2">BlueViolet</Color>
     <Color x:Key="secondaryBackColor1">#24105F</Color>
     <Color x:Key="secondaryBackColor2">#210F55</Color>
     <!--Window Border Colors-->
-    <Color x:Key="winBorderColor1">#6D2FFF</Color>
-    <Color x:Key="winBorderColor2">#FB539B</Color>
-    <Color x:Key="winBorderColor3">#836EFB</Color>
+    <Color x:Key="winBorderColor1">Green</Color>
+    <Color x:Key="winBorderColor2">Gold</Color>
+    <Color x:Key="winBorderColor3">Blue</Color>
     <!--Color Palette-->
     <SolidColorBrush x:Key="color1" Color="#E285DE"/>
     <SolidColorBrush x:Key="color2" Color="#784DFD"/>
