main window progressing

--- a/cvManager/App.xaml
+++ b/cvManager/App.xaml
@@ -4,7 +4,13 @@
              xmlns:local="clr-namespace:cvManager"
              Startup="ApplicationStart">
     <Application.Resources>
-        <ResourceDictionary Source="/Styles/UIColors.xaml"/>
+        <ResourceDictionary >
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Styles/UIColors.xaml"/>
+                <ResourceDictionary Source="/Styles/ButtonStyles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+        
 
     </Application.Resources>
 </Application>
