--- a/cvManager/Styles/UIColors.xaml
+++ b/cvManager/Styles/UIColors.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!--Background Colors-->
     <Color x:Key="primaryBackColor1">Green</Color>
-    <Color x:Key="primaryBackColor2">BlueViolet</Color>
+    <Color x:Key="primaryBackColor2">#692ED8</Color>
     <Color x:Key="secondaryBackColor1">#24105F</Color>
     <Color x:Key="secondaryBackColor2">#210F55</Color>
     <!--Window Border Colors-->
@@ -19,8 +19,12 @@
     <SolidColorBrush x:Key="color7" Color="#EF6C96"/>
     <SolidColorBrush x:Key="color8" Color="#78A3FC"/>
     <SolidColorBrush x:Key="color9" Color="#07F3C0"/>
-    <SolidColorBrush x:Key="color10" Color="#FBA1AA"/>
-    <!--Font Colors-->
+    <SolidColorBrush x:Key="color11" Color="#BEC100"/>
+    <SolidColorBrush x:Key="color12" Color="#AF5F61"/>
+    <SolidColorBrush x:Key="color13" Color="Goldenrod"/>
+    <SolidColorBrush x:Key="color14" Color="#FBA1AA"/>
+    
+    <!--Font Colors#-->
     <SolidColorBrush x:Key="titleColor1" Color="#E0E1F1"/>
     <SolidColorBrush x:Key="titleColor2" Color="#D5CFF5"/>
     <SolidColorBrush x:Key="titleColor3" Color="#BCBEE0"/>
