--- a/cvManager/Styles/ButtonStyles.xaml
+++ b/cvManager/Styles/ButtonStyles.xaml
@@ -116,7 +116,7 @@
         <Setter Property="Width" Value="35"/>
 
         <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="Foreground" Value="{StaticResource plainTextColor3}"/>
+        <Setter Property="Foreground" Value="#2B007C"/>
 
         <Setter Property="Template">
             <Setter.Value>
