receving data from db is done

--- a/cvManager/View/CondidateView.xaml
+++ b/cvManager/View/CondidateView.xaml
@@ -4,8 +4,13 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:cvManager.View" xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
+             xmlns:viewModel="clr-namespace:cvManager.ViewModel"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    
+    <UserControl.DataContext>
+        <viewModel:CondidateViewModel/>
+    </UserControl.DataContext>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
@@ -73,7 +78,7 @@
                 Padding="10">
             <DataGrid ColumnWidth="*"
                   Background="#200F53"
-                  BorderThickness="0">
+                  BorderThickness="0" ItemsSource="{Binding CondidateRecords}" AutoGenerateColumns="False">
                 <DataGrid.ColumnHeaderStyle>
                     <Style TargetType="DataGridColumnHeader">
                         <Setter Property="Background" Value="Transparent"/>
@@ -84,12 +89,34 @@
                     </Style>
                 </DataGrid.ColumnHeaderStyle>
                 <DataGrid.Columns>
-                    <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="ID" HeaderStringFormat=""/>
-                    <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="First name"/>
-                    <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="Last name"/>
-                    <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="Phone"/>
-                    <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="Number"/>
-                    <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="Address"/>
+                    <DataGridTextColumn Binding="{Binding Path=Id ,Mode=OneWay}" ClipboardContentBinding="{x:Null}" Header="Name" Visibility="Hidden" HeaderStringFormat=""/>
+                    <DataGridTextColumn Binding="{Binding Path=Name,Mode=OneWay}" ClipboardContentBinding="{x:Null}" Header="First name"/>
+                    <DataGridTextColumn Binding="{Binding Path=LastName,Mode=OneWay}" ClipboardContentBinding="{x:Null}" Header="Last name"/>
+                    <DataGridTextColumn Binding="{Binding Path=Age,Mode=OneWay}" ClipboardContentBinding="{x:Null}" Header="Age"/>
+                    <DataGridTextColumn Binding="{Binding Path=Email,Mode=OneWay}" ClipboardContentBinding="{x:Null}" Header="Email"/>
+                    <DataGridTextColumn Binding="{Binding Path=Level,Mode=OneWay}" ClipboardContentBinding="{x:Null}" Header="Level"/>
+                    <DataGridTextColumn Binding="{Binding Path=Experience,Mode=OneWay}" ClipboardContentBinding="{x:Null}" Header="Experience"/>
+                    <DataGridTextColumn Binding="{Binding Path=Profession,Mode=OneWay}" ClipboardContentBinding="{x:Null}" Header="Profession"/>
+                    <DataGridTemplateColumn Width="50">
+                    <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Content="Select" x:Name="ButtonEdit" CommandParameter="{Binding Path=Id}"
+                                        Command="{Binding Path=DataContext.EditCommand,RelativeSource={RelativeSource FindAncestor,
+                                                AncestorType=Window}}"/>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                    <DataGridTemplateColumn Width="50">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Content="Delete" x:Name="ButtonDelete" CommandParameter="{Binding Path=Id}"
+                                        Command="{Binding Path=DataContext.DeleteCommand, RelativeSource={RelativeSource FindAncestor,
+                                                AncestorType=Window}}"/>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                    
+                    
                 </DataGrid.Columns>
             </DataGrid>
         </Border>
